created basic structure

--- a/final report.tex
+++ b/final report.tex
@@ -13,7 +13,7 @@
 \setlength\headheight{42pt} %% just to make warning go away. Adjust the value after looking into the warning.
 % \rhead{{\color{blue}\rule{1cm}{1cm}}}
 
-\rhead{\includegraphics[width=3cm]{envisa_logo.png}}
+\rhead{\includegraphics[width=2cm]{envisa_logo.png}}
 
 % \rhead{\begin{picture}(3,3) \put(3,3){\includegraphics[width=1cm]{example-image-a}} \end{picture}}
 
@@ -42,6 +42,16 @@
     \tableofcontents
     \newpage
     
-    \lipsum
-    
+    \part{Objectifs du Stage}
+    \newpage
+    \part{Présentation d'Envisa}
+    \newpage
+    \part{Travail Réalisé}
+    \section{Analyse Bruit : ATAEGINA}
+    \subsection{Objectif}
+    \subsection{Outils Existants}
+    \subsection{Outils Développés}
+    \subsection{Résultats de l'Analyse Bruit}
+    \newpage
+    \part{Conclusion}
 \end{document}
