lots of bits added here and there

--- a/final report.tex
+++ b/final report.tex
@@ -10,7 +10,8 @@
 \usepackage{xcolor}
 
 \usepackage{lipsum}
-\setlength\headheight{42pt} %% just to make warning go away. Adjust the value after looking into the warning.
+\setlength\parindent{0pt} % remove paragraph indentation
+\setlength\headheight{42pt} % just to make warning go away. Adjust the value after looking into the warning.
 % \rhead{{\color{blue}\rule{1cm}{1cm}}}
 
 \rhead{\includegraphics[width=2cm]{envisa_logo.png}}
@@ -43,8 +44,27 @@
     \newpage
     
     \part{Objectifs du Stage}
+    pour prendre part à un projet européen Clean Sky. Le travail portera sur l'évaluation de l'impact environ-nemental de nouvelles procédures de vol des avions, dans le cadre du projet ATAEGINA (Airline Trials of Environmental Green Flight Management Functions).
+    Le stage portera sur la modélisation bruit et émissions de ces nouvelles procédures à partir de données enregistrées en conditions réelles de vols. Les modélisations bruit seront réalisées à partir des modèles INM, AEDT et STAPES, et les modélisations des émissions à partir du modèle Turbogas. Les résultats de ces modélisations devront être analysés statistiquement et une étude paramétrique sur les modèles de-vra être réalisée. Le développement de programmes pour l'automatisation de l'analyse et la visualisation des résultats (grand jeu de données) seront nécessaires. Il pourra être demandé au stagiaire de participer ponctuellement à d'autres projets du bureau d'étude.
+    Profil recherché :
+    \begin{itemize}
+        \item Niveau Master 1/2 ou 2/3ème année d'école d'ingénieur en acoustique ou environnement
+        \item Connaissance de l'acoustique et/ou émissions, la maîtrise des modélisations environnementales
+        \item Attrait pour l'aviation et/ou l'environnement
+        \item Connaissance des statistiques et de l'analyse de données
+        \item Maitrise des langages de programmations (Matlab/Python/C...)
+        \item Anglais écrit et parlé
+        \item Maitrise des bases de données serait un plus (SQL)
+        \item Connaissance de l'aéronautique serait un plus
+    \end{itemize}
+    
+    
     \newpage
     \part{Présentation d'Envisa}
+    \paragraph{Français}
+    Envisa est une société de conseil en environnement spécialisée dans l'aviation durable, qui a été fondé il y a en 2004 par Mme Ayce Celikel.
+    \paragraph{English}
+    Envisa is a global environmental consulting company specializing in sustainable aviation. It was founded in 2004 by Ms. Ayce Celikel.
     \newpage
     \part{Travail Réalisé}
     \section{Analyse Bruit : ATAEGINA}
