cumstomized title page, added lots of stuff

--- a/my_glossary.tex
+++ b/my_glossary.tex
@@ -1,9 +1,45 @@
-\newacronym{ATAEGINA}{ATAEGINA}{Airline TriAls of Environmental Green flIght maNAgement functions}
+% acronyms
 \newacronym{AEDT}{AEDT}{Aviation Environmental Design Tool}
+\newacronym{ALAQS}{ALAQS}{Airport Local Air Quality Studies}
+\newacronym{ANSP}{ANSP}{Services de Navigation Aérienne ou Air Navigation Service Provider}
+\newacronym{ATAEGINA}{ATAEGINA}{Airline TriAls of Environmental Green flIght maNAgement functions}
+\newacronym{B2B}{B2B}{Business to Business}
+\newacronym{BFFM2}{BFFM2}{Boeing Fuel Flow Method 2}
+\newacronym{CO2}{CO2}{Dioxyde de carbone}
 \newacronym{FAA}{FAA}{Federal Aviation Agency}
 \newacronym{FDR}{FDR}{Flight Data Recording}
+\newacronym{GSE}{GSE}{Équipements de Support de Piste ou Ground Support Equipment}
 \newacronym{ICAO}{ICAO}{International Civil Aviation Organization}
 \newacronym{INM}{INM}{Integrated Noise Model}
+\newacronym{MTOW}{MTOW}{Max Take-Off Weight}
+\newacronym{NMT}{NMT}{Noise Monitoring Terminal}
+\newacronym{NOx}{NOx}{Oxydes d'azote}
+\newacronym{OACI}{OACI}{Organisation de l'Aviation Civile Internationale}
+\newacronym{P3T3}{P3T3}{Pressure and Temperature in combustion chamber}
+\newacronym{SGBD}{SGBD}{Système de Gestion de Bases de Données}
+\newacronym{SIG}{SIG}{Système d'Information Géographique}
+\newacronym{STAPES}{STAPES}{System for AirPort noise Exposure Studies}
+
+% glossary entries
+\newglossaryentry{ACARE}
+{
+	name={ACARE},
+	description={Advisory Council for Aviation Research and innovation in Europe}
+}
+\newglossaryentry{AUSTAL2000}
+{
+	name={AUSTAL2000},
+	description={Modèle de dispersion atmosphérique qui simule la dispersion de polluant dans l'atmosphère ambiante}
+}
+\newglossaryentry{Caracteristique}
+{
+	name={Caractéristique (SIG)},
+	description={Tout élément ajouté à une couche dans le SIG}
+}
+\newglossaryentry{Clean Sky}{
+	name={Clean Sky},
+	description={}
+}
 \newglossaryentry{DNL}
 {
     name={DNL},
@@ -13,6 +49,16 @@
 {
     name={EPNL},
     description={Effective Perceived Tone-Corrected Noise Level}
+}
+\newglossaryentry{EUROCONTROL}
+{
+	name={EUROCONTROL},
+	description={Organisation européenne pour la sécurité de la navigation aérienne}
+}
+\newglossaryentry{Inkscape}
+{
+	name={Inkscape},
+	description={Logiciel open source de dessin vectoriel, très utilisé notamment pour la création de logos}
 }
 \newglossaryentry{LAMAX}
 {
@@ -24,6 +70,16 @@
     name={LCMAX},
     description={Maximum C-Level}
 }
+\newglossaryentry{Open-ALAQS}
+{
+	name={Open-ALAQS},
+	description={description}
+}
+\newglossaryentry{QGIS}
+{
+	name={QGIS},
+	description={Précédemment connu sous le nom Quantum GIS, QGIS est un logiciel SIG libre}
+}
 \newglossaryentry{PNLTM}
 {
     name={PNLTM},
@@ -34,5 +90,30 @@
     name={SEL},
     description={Sound Exposure Level}
 }
-\newglossaryentry{TALA}{name={TALA},description={Time-Above A-Level}}
-\newglossaryentry{TALC}{name={TALC},description={Time-Above C-Level}}
+\newglossaryentry{SQLite}
+{
+	name={SQLite},
+	description={Système de gestion de bases de données libre, particulièrement adapté aux bases de données locales}
+}
+\newglossaryentry{TALA}{
+	name={TALA},
+	description={Time-Above A-Level}
+}
+\newglossaryentry{TALC}{
+	name={TALC},
+	description={Time-Above C-Level}
+}
+\newglossaryentry{Turbogas}
+{
+	name={Turbogas},
+	description={description}
+}
+\newglossaryentry{WAMP}
+{
+	name={WAMP},
+	description={Acronyme de Windows Apache MySQL PHP, WAMP est un logiciel regroupant ces 3 outils de développement web pour la plateforme Windows. Il existe également MAMP pour Mac.}
+}
+\newglossaryentry{WordPress}{
+	name={WordPress},
+	description={Outil de création de sites internet ne nécessitant pas de connaissances particulières en langages de programmation web}
+}
